# square_exam

./: .gitignore  README.md  database.py  main.py  pyproject.toml  requirements.txt
square/: schemas.py  square.py
templates/: index.html
