[tool.poetry]
name = "demo-sqr"
version = "0.1.0"
description = ""
authors = ["Maxim Sytdikov <maxim.sytdikov@saritasa.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
